# MCUControllerCPP

./: .gitignore  CMakeLists.txt  MCUControllerCPP.cpp  MET.rc  README.md  bottom_view.cpp  bottom_view.h  device.h  images.qrc  main.cpp  main.qml  main_window.cpp  main_window.h  main_window_ui.h  mainwindow.cpp  mainwindow.h  mainwindow_ui.h  splash_screen.qml  test.cpp  test.h  test.qml  upper_view.cpp  upper_view.h  utility.cpp  utility.h
arduino/: uno.ino
arduino/due/: due.ino
arduino/uno/: uno.ino
configuration/: config.json
devices/: device.cpp  device.h  due.cpp  g1b.cpp  reglo_icc.cpp
views/: automation_view.cpp  automation_view.h  bottom_view.cpp  bottom_view.h  g1b_view.cpp  g1b_view.h  monitor_view.cpp  monitor_view.h  pulse_generator_view.cpp  pulse_generator_view.h  pump_channel_view.cpp  pump_channel_view.h  pump_view.cpp  pump_view.h  reglo_icc_view.cpp  reglo_icc_view.h  upper_view.cpp  upper_view.h
widgets/: button.cpp  button.h  buttons.cpp  buttons.h  canvas.cpp  canvas.h  color.h  combo_box.cpp  combo_box.h  dialog.cpp  dialog.h  font.h  helper.cpp  helper.h  label.cpp  label.h  lcd.cpp  lcd.h  line_edit.cpp  line_edit.h  loading.cpp  loading.h  login_subwindow.cpp  login_subwindow.h  menu.cpp  menu.h  msg_subwindow.cpp  msg_subwindow.h  painter.cpp  painter.h  process_unit.cpp  process_unit.h  pump_channel.cpp  pump_channel.h  slider.cpp  slider.h  style.cpp  style.h  tab.cpp  tab.h  (+4 more)
